@@ -910,15 +910,9 @@ focus_tree = {
 				target = CHI
 				modifier = diplomatic_support
 			}
-			set_temp_variable = {
-				percent_change = 3
-			}
-			set_temp_variable = {
-				tag_index = CHI
-			}
-			set_temp_variable = {
-				influence_target = CHI
-			}
+			set_temp_variable = { percent_change = 3 }
+			set_temp_variable = { tag_index = CHI.id }
+			set_temp_variable = { influence_target = THIS.id }
 			change_influence_percentage = yes
 		}
 		ai_will_do = {
@@ -17063,8 +17057,8 @@ focus_tree = {
 					}
 				}
 				set_temp_variable = { percent_change = 5.00 }
-				set_temp_variable = { tag_index = ISR }
-				set_temp_variable = { influence_target = THIS }
+				set_temp_variable = { tag_index = ISR.id }
+				set_temp_variable = { influence_target = SUD.id }
 				change_influence_percentage = yes
 				custom_effect_tooltip = decreses_boyc_tt
 			}
