@@ -643,6 +643,10 @@ country_event = {
 				modifier = SIN_provided_clemency_to_african_men
 			}
 		}
+
+		ai_chance = {
+			base = 1
+		}
 	}
 
 	option = {
@@ -655,6 +659,14 @@ country_event = {
 			}
 		}
 		add_stability = 0.01
+
+		ai_chance = {
+			base = 1
+			modifier = {
+				factor = 1.5
+				has_stability < 0.5
+			}
+		}
 	}
 }
 
