@@ -14,6 +14,8 @@ v1.12.2
   - Fixed a bug where China's economic focuses for developing various regions did not accommodate for subjects such as the SARs
   - Fixed a bug with the Arab Spring mechanic where the "Extensive Welfare State" idea was not properly reducing the Arab Spring change
   - Introduced a degree of randomness to when the Arab Spring protest events spawn for each nation after the mission timeout so the world doesn't get spammed with events at the same time
+  - Fixed a bug where Singapore's opinion modifiers were not properly decaying and instead were increasing the opinion
+  - Removed duplicate defines that were in the defines
 
  Content:
   - Added new decisions for Bolivia to allow them to develop their oil reserves
